# crypto_quant

./: .gitignore  GridTrading.py  README.md  backtesting.py  batch_backtesting.py  bitbucket-pipelines.yml  coin_list.py  get_cur_price.py  get_factors.py  itchat_test.py  pyproject.toml  test_binance_api.py  utils.py
advanced_ta/: Utils.py  __init__.py
advanced_ta/LorentzianClassification/: Classifier.py  KernelFunctions.py  MLExtensions.py  Types.py
scripts/: 4h_to_1d.py  but_sell_list.py  stat_high_profit.py  test_1d_wave_pred.py  wave_strategy_stat.py
strategies/: RSI_ADX_Lorentzian.py  coin_list.py  coint_test.py  coint_test2.py  cur_lorentzian.py  cur_wave.py  lorentzian_stop_loss.py  lorentzian_v2.py  pair_trading.py  pair_trading2.py  pair_trading_dyn_weight.py  stat_lorentzian.py  three_trend_align.py  wave_strategy.py  wave_strategy3.py  wave_trend.py
tests/: _test_advanced_ta.py  test_lorentzian_classification.py
tests/data/: NSE_NIFTY_DAILY.csv  NSE_NIFTY_MONTHLY.csv
tests/expected/: lc_case1.csv  lc_case3.csv
visual/: plot.py
