[tool.poetry]
name = "advanced-ta"
version = "0.1.8"
description = "Python implementation of Lorentzian Classification algorithm."
authors = ["Loki Arya <loki.arya+osdev@gmail.com>"]
readme = "README.md"
repository = "https://bitbucket.org/lokiarya/advanced-ta"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
ta = "^0.11.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.0"
mplfinance = "^0.12.9-beta.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-profiling = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
